Fix Navbar overflow

--- a/styles/components/Banner.module.scss
+++ b/styles/components/Banner.module.scss
@@ -12,6 +12,7 @@
     @include BaronNeueHeading;
     margin: 0;
     color: #FFFFFF;
+    text-align: center;
   }
 }
 
@@ -23,6 +24,25 @@
     object-position: center;
     width: 100%;
     height: 100%;
+  }
+}
+
+.BannerNavbar {
+  position: absolute;
+  z-index: 999;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  .NavbarWrapper {
+    padding: 0;
+    height: 100%;
+    max-width: $breakpointDesktop;
+    margin: 0 auto;
+    float: none;
+    @media only screen and (max-width: $breakpointMax) {
+      margin: 0 1rem;
+    }
   }
 }
 
