--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -16,6 +16,7 @@
 }
 
 .HeaderImage {
+  position: relative;
   height: 60vh;
   min-height: 440px;
   img {
@@ -23,6 +24,25 @@
     object-position: center;
     width: 100%;
     height: 100%;
+  }
+}
+
+.HeaderNavbar {
+  position: absolute;
+  z-index: 999;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  .NavbarWrapper {
+    padding: 0;
+    height: 100%;
+    max-width: $breakpointDesktop;
+    margin: 0 auto;
+    float: none;
+    @media only screen and (max-width: $breakpointMax) {
+      margin: 0 1rem;
+    }
   }
 }
 
